change expiration rule in save article workflow